--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,9 @@
 name = "boredos"
 version = "0.1.0"
 authors = ["Rishi Desai <desai.rishi1@gmail.com>"]
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-
-[package.metadata.bootimage]
-default-target = "boredos.json"
+bootloader = "0.8.0"
