--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ features = ["spin_no_std"]
 [package.metadata.bootimage]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33         # (0x10 << 1) | 1
+
+[[test]]
+name = "should_panic"
+harness = false
